adding and fixing
